Adding log4j and some logs.

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,6 @@
 xmpp.host=localhost
-xmpp.port=5275
+xmpp.port=5347
 xmpp.subdomain=channels.localhost
 xmpp.secretkey=secret
-
-redis.host=127.0.0.1
+redis.host=localhost
 redis.port=9876
