Update task names

--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
-<project name="Buddycloud java server" default="run" basedir=".">
+<project name="Buddycloud java server" default="server-start" basedir=".">
 	<property name="jar" location="target/buddycloud-server.jar"/>
-    <target name="stop">
+    <target name="server-stop">
     	<exec executable="killall">
     	    <arg value="buddycloud-server" />
     	</exec>
 	</target>
-    <target name="run" depends="stop">
+    <target name="server-start" depends="server-stop">
         <exec executable="java">
         	<arg value="jar ${jar}" />
     	</exec>
