--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,25 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.12</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.6</version>
+                    <executions>
+                        <execution>
+                            <id>buddycloud-server-start</id>                        
+                            <phase>server-start</phase>
+                            <configuration>
+                                <tasks>             
+                                    <ant antfile="build.xml" target="run" />
+                                </tasks>
+                            </configuration>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
