--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12</version>
+                    <version>2.5</version>
+                    <configuration>
+                        <skipTests>false</skipTests>
+                        <testFailureIgnore>false</testFailureIgnore>
+                        <forkMode>once</forkMode>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
