--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,9 @@
                         <skipTests>false</skipTests>
                         <testFailureIgnore>true</testFailureIgnore>
                         <forkMode>once</forkMode>
+                        <systemPropertyVariables>
+                            <log4j.configuration>file:${project.basedir}/src/test/java/resources/log4j.properties</log4j.configuration>
+                        </systemPropertyVariables>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -117,6 +120,15 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
