--- a/pom.xml
+++ b/pom.xml
@@ -133,4 +133,7 @@
             </plugins>
         </pluginManagement>
     </build>
+    <properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
