--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.hsqldb</groupId>
+        	<artifactId>hsqldb</artifactId>
+        	<version>2.2.8</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
