--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,17 @@
         	<artifactId>hsqldb</artifactId>
         	<version>2.2.8</version>
         </dependency>
+        <dependency>
+        	<groupId>commons-collections</groupId>
+        	<artifactId>commons-collections</artifactId>
+        	<version>3.2.1</version>
+        </dependency>
+        <dependency>
+        	<groupId>nl.jqno.equalsverifier</groupId>
+        	<artifactId>equalsverifier</artifactId>
+        	<version>1.1.3</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
