WIP: All code probably in place. Some tests broken. Completely untested!

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -2,12 +2,12 @@ server.domain          = example.com
 server.domain.channels = channels.example.com
 server.domain.topics   = topics.example.com
 
-redis.host=localhost
-redis.port=6379
-
-mongo.host=localhost
-mongo.port=27017
-mongo.db=buddycloud
+jdbc.proxool.driver-url=jdbc:hsqldb:.
+jdbc.proxool.driver-class=org.hsqldb.jdbcDriver
+jdbc.user=sa
+jdbc.password=
+jdbc.proxool.maximum-connection-count=10
+jdbc.proxool.house-keeping-test-sql=select CURRENT_DATE
 
 channel.user.open   = true
 channel.topics.open = true
