--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
         	<version>1.1.3</version>
         	<scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>proxool</groupId>
+        	<artifactId>proxool</artifactId>
+        	<version>0.8.3</version>
+        </dependency>
+        <dependency>
+        	<groupId>commons-lang</groupId>
+        	<artifactId>commons-lang</artifactId>
+        	<version>2.6</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
