--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
                     <version>2.5</version>
                     <configuration>
                         <skipTests>false</skipTests>
-                        <testFailureIgnore>true</testFailureIgnore>
+<!-- 					<testFailureIgnore>true</testFailureIgnore> -->
                         <forkMode>once</forkMode>
                         <includes>
                             <include>**/*Test.java</include>
