--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.buddycloud</groupId>
     <artifactId>channelserver</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.3</version>
+    <version>0.1.3-SNAPSHOT</version>
     <name>Buddycloud Java Server</name>
     <scm>
         <url>https://github.com/buddycloud/buddycloud-server-java</url>
