Add tests for firehose related queries

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,6 +1,6 @@
-server.domain          = example.com
-server.domain.channels = channels.example.com
-server.domain.topics   = topics.example.com
+server.domain          = server1
+server.domain.channels = channels.server1
+server.domain.topics   = topics.server1:
 
 jdbc.proxool.driver-url=jdbc:hsqldb:.
 jdbc.proxool.driver-class=org.hsqldb.jdbcDriver
