--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -11,3 +11,5 @@ jdbc.proxool.house-keeping-test-sql=select CURRENT_DATE
 
 channel.user.open   = true
 channel.topics.open = true
+
+users.admin = user1@server1;user2@server1
