Fixes #50: Auto-subscribe for new users

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -13,3 +13,4 @@ channel.user.open   = true
 channel.topics.open = true
 
 users.admin = user1@server1;user2@server1
+channels.autosubscribe=channel1@server1;channel2@server1
