--- a/configuration.properties.example
+++ b/configuration.properties.example
@@ -17,3 +17,7 @@ jdbc.proxool.house-keeping-test-sql=select CURRENT_DATE
 # Admin users are sent all notiifcations as well as having access 
 # to all posts from the /firehose node (not just from public channels)
 users.admin = user1@example.com;crawler@searchengine.org
+
+# A list of channels (local or remote) to which to subscribe new users
+# Note that the channels will not be created - they must already exist
+channels.autosubscribe=lounge@example.com;welcome@example.com
