--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
+                        <useFile>false</useFile>
                     </configuration>
                 </plugin>
                 <plugin>
