--- a/configuration.properties.example
+++ b/configuration.properties.example
@@ -21,3 +21,8 @@ users.admin = user1@example.com;crawler@searchengine.org
 # A list of channels (local or remote) to which to subscribe new users
 # Note that the channels will not be created - they must already exist
 channels.autosubscribe=lounge@example.com;welcome@example.com
+
+# If any of the 'channels.autosubscribe' channels are private local channels,
+# then whether to automatically approve the user.
+# NOTE: This will only work on local private channels
+channels.autosubscribe.autoapprove=false
