--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -14,3 +14,4 @@ channel.topics.open = true
 
 users.admin = user1@server1;user2@server1
 channels.autosubscribe=channel1@server1;channel2@server1
+channels.autosubscribe.autoapprove=true
