--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             <artifactId>log4jdbc-remix</artifactId>
             <version>0.2.3</version>
          </dependency>
+         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+         </dependency>
     </dependencies>
     <repositories>
         <repository>
