Use non-ant report builder

--- a/pom.xml
+++ b/pom.xml
@@ -139,23 +139,41 @@
     <build>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.6</version>
+                    <!-- Extended Maven antrun plugin -->
+                    <!-- https://maven-antrun-extended-plugin.dev.java.net/ -->
+                    <groupId>org.jvnet.maven-antrun-extended-plugin</groupId>
+                    <artifactId>maven-antrun-extended-plugin</artifactId>
                     <executions>
-                        <execution>
-                            <id>buddycloud-server-start</id>                        
-                            <phase>server-start</phase>
-                            <configuration>
-                                <tasks>             
-                                    <ant antfile="build.xml" target="run" />
-                                </tasks>
-                            </configuration>
-                            <goals>
-                                <goal>run</goal>
-                            </goals>
-                        </execution>
+                      <execution>
+                        <id>test-reports</id>
+                        <phase>test</phase>
+                        <configuration>
+                          <tasks>
+                            <junitreport todir="target/surefire-reports">
+                              <fileset dir="target/surefire-reports">
+                                <include name="**/*.xml"/>
+                              </fileset>
+                              <report format="noframes" todir="target/surefire-reports"/>
+                            </junitreport>
+                          </tasks>
+                        </configuration>
+                        <goals>
+                          <goal>run</goal>
+                        </goals>
+                      </execution>
                     </executions>
+                    <dependencies>
+                      <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant-junit</artifactId>
+                        <version>1.8.0</version>
+                      </dependency>
+                      <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant-trax</artifactId>
+                        <version>1.8.0</version>
+                      </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
