Increase memory as was receiving 'heap space' errors

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,7 @@
                               <report format="noframes" todir="target/surefire-reports"/>
                             </junitreport>
                           </tasks>
+                          <argLine>-Xmx1024m</argLine>
                         </configuration>
                         <goals>
                           <goal>run</goal>
