--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     </scm>
     <dependencies>
         <dependency>
+	    <groupId>dnsjava</groupId>
+	    <artifactId>dnsjava</artifactId>
+	    <version>2.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
