--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -15,3 +15,6 @@ channel.topics.open = true
 users.admin = user1@server1;user2@server1
 channels.autosubscribe=channel1@server1;channel2@server1
 channels.autosubscribe.autoapprove=true
+
+channels.default.accessmodel=open
+channels.default.role=follower
