--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     </scm>
     <dependencies>
         <dependency>
-	    <groupId>dnsjava</groupId>
+	    <groupId>org.xbill</groupId>
 	    <artifactId>dnsjava</artifactId>
-	    <version>2.1.1</version>
+	    <version>2.1.6</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -75,7 +75,7 @@
             <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
             <version>1.3</version>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>xpp3</groupId>
             <artifactId>xpp3</artifactId>
