Use pubsub affiliations not 'friendly' affiliation names

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -17,4 +17,4 @@ channels.autosubscribe=channel1@server1;channel2@server1
 channels.autosubscribe.autoapprove=true
 
 channels.default.accessmodel=open
-channels.default.role=follower
+channels.default.role=member
