Update configuration key names

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -16,5 +16,11 @@ users.admin = user1@server1;user2@server1
 channels.autosubscribe=channel1@server1;channel2@server1
 channels.autosubscribe.autoapprove=true
 
-channels.default.accessmodel=open
-channels.default.role=member
+channel.configuration.default.accessmodel=open
+channel.configuration.default.affiliation=member
+
+channel.configuration.posts.accessmodel=publisher
+
+channel.configuration.geo.next.accessmodel=authorize
+channel.configuration.geo.current.accessmodel=authorize
+channel.configuration.geo.previous.accessmodel=authorize
