Update tests for overrides

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -19,7 +19,7 @@ channels.autosubscribe.autoapprove=true
 channel.configuration.default.accessmodel=open
 channel.configuration.default.affiliation=member
 
-channel.configuration.posts.accessmodel=publisher
+channel.configuration.posts.affiliation=publisher
 
 channel.configuration.geo.next.accessmodel=authorize
 channel.configuration.geo.current.accessmodel=authorize
