Allow overrides on title and description

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -25,5 +25,5 @@ channel.configuration.geo.next.accessmodel=authorize
 channel.configuration.geo.current.accessmodel=authorize
 channel.configuration.geo.previous.accessmodel=authorize
 
-channel.configuration.status.description="%jid%'s status"
-channel.configuration.status.description="The current status of %jid%"
+channel.configuration.status.title=%jid%'s status
+channel.configuration.status.description=The current status of %jid%
