--- a/configuration.properties.example
+++ b/configuration.properties.example
@@ -39,5 +39,5 @@ channel.configuration.geo.next.accessmodel=authorize
 channel.configuration.geo.current.accessmodel=authorize
 channel.configuration.geo.previous.accessmodel=authorize
 
-channel.configuration.status.description="%jid%'s status"
-channel.configuration.status.description="The current status of %jid%"
+channel.configuration.status.description=%jid%'s status
+channel.configuration.status.description=The current status of %jid%
