--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-install: mvn install --quiet -DskipTests=true
+script: mvn -s pom-travis.xml test
 jdk:
   - oraclejdk7
   - openjdk6
