--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+install: mvn --quiet --skipTest=true -s pom-travis.xml install
 script: mvn -s pom-travis.xml test
 jdk:
   - oraclejdk7
