--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.5</version>
                     <configuration>
+                      <argLine>-Duser.timezone=UTC</argLine>
                         <skipTests>false</skipTests>
  					<testFailureIgnore>true</testFailureIgnore>
                         <forkMode>once</forkMode>
