--- a/pom.xml
+++ b/pom.xml
@@ -1,275 +1,241 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.buddycloud</groupId>
-    <artifactId>channelserver</artifactId>
-    <packaging>jar</packaging>
-    <version>0.18.0-SNAPSHOT</version>
-    <name>Buddycloud Java Server</name>
-    <scm>
-        <url>https://github.com/buddycloud/buddycloud-server-java</url>
-    </scm>
-    <dependencies>
-        <dependency>
-	    <groupId>org.xbill</groupId>
-	    <artifactId>dnsjava</artifactId>
-	    <version>2.1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
-            <artifactId>concurrentlinkedhashmap-lru</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.1-901.jdbc4</version>
-        </dependency>
-        <dependency>
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>jaxen</groupId>
-            <artifactId>jaxen</artifactId>
-            <version>1.1.3</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>maven-cobertura-plugin</artifactId>
-                    <groupId>maven-plugins</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>maven-findbugs-plugin</artifactId>
-                    <groupId>maven-plugins</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.5.8</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.5.8</version>
-        </dependency>
-        <dependency>
-            <groupId>xmlunit</groupId>
-            <artifactId>xmlunit</artifactId>
-            <version>1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>xpp3</groupId>
-            <artifactId>xpp3</artifactId>
-            <version>1.1.4c</version>
-        </dependency>
-        <dependency>
-            <groupId>org.igniterealtime</groupId>
-            <artifactId>tinder</artifactId>
-            <version>1.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jivesoftware</groupId>
-            <artifactId>whack</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>org.hsqldb</groupId>
-        	<artifactId>hsqldb</artifactId>
-        	<version>2.2.8</version>
-        </dependency>
-        <dependency>
-        	<groupId>commons-collections</groupId>
-        	<artifactId>commons-collections</artifactId>
-        	<version>3.2.1</version>
-        </dependency>
-        <dependency>
-        	<groupId>nl.jqno.equalsverifier</groupId>
-        	<artifactId>equalsverifier</artifactId>
-        	<version>1.1.3</version>
-        	<scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>proxool</groupId>
-        	<artifactId>proxool</artifactId>
-        	<version>0.8.3</version>
-        </dependency>
-        <dependency>
-        	<groupId>commons-lang</groupId>
-        	<artifactId>commons-lang</artifactId>
-        	<version>2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.lazyluke</groupId>
-            <artifactId>log4jdbc-remix</artifactId>
-            <version>0.2.3</version>
-         </dependency>
-         <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.3</version>
-         </dependency>
-        <dependency>
-            <groupId>net.xeoh</groupId>
-            <artifactId>jspf.core</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-    </dependencies>
-    <repositories>
-        <repository>
-            <id>project.local</id>
-            <name>project</name>
-            <url>file:${project.basedir}/repo</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-      <pluginRepository>
-        <id>evgenyg</id>
-        <name>Evgeny Goldin repo</name>
-        <url>http://evgenyg.artifactoryonline.com/evgenyg/repo/com/github/goldin/</url>
-      </pluginRepository>
-    </pluginRepositories>
-    <build>
-            <plugins>
-                <plugin>
-                    <!-- Extended Maven antrun plugin -->
-                    <!-- https://maven-antrun-extended-plugin.dev.java.net/ -->
-                    <groupId>org.jvnet.maven-antrun-extended-plugin</groupId>
-                    <artifactId>maven-antrun-extended-plugin</artifactId>
-                    <executions>
-                      <execution>
-                        <id>test-reports</id>
-                        <phase>test</phase>
-                        <configuration>
-                          <tasks unless="maven.test.skip">
-                            <junitreport todir="target/surefire-reports">
-                              <fileset dir="target/surefire-reports">
-                                <include name="**/*.xml"/>
-                              </fileset>
-                              <report format="noframes" todir="target/surefire-reports"/>
-                            </junitreport>
-                          </tasks>
-                        </configuration>
-                        <goals>
-                          <goal>run</goal>
-                        </goals>
-                      </execution>
-                    </executions>
-                    <dependencies>
-                      <dependency>
-                        <groupId>org.apache.ant</groupId>
-                        <artifactId>ant-junit</artifactId>
-                        <version>1.8.0</version>
-                      </dependency>
-                      <dependency>
-                        <groupId>org.apache.ant</groupId>
-                        <artifactId>ant-trax</artifactId>
-                        <version>1.8.0</version>
-                      </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.5</version>
-                    <configuration>
-                      <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
-                        <skipTests>false</skipTests>
- 					<testFailureIgnore>true</testFailureIgnore>
-                        <forkMode>once</forkMode>
-                        <includes>
-                            <include>**/*Test.java</include>
-                        </includes>
-                        <useFile>false</useFile>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5.1</version>
-                    <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                 <mainClass>org.buddycloud.channelserver.Main</mainClass>
-                            </manifest>
-                        </archive>
-                        <descriptorRefs>
-                            <descriptorRef>${project.build.withDependencies}</descriptorRef>
-                        </descriptorRefs>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>jar-with-dependencies</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>single</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                  <groupId>com.github.goldin</groupId>
-                  <artifactId>copy-maven-plugin</artifactId>
-                  <version>0.2.5</version>
-                  <executions>
-                    <execution>
-                      <id>create-archive</id>
-                      <phase>package</phase>
-                      <goals>
-                        <goal>copy</goal>
-                      </goals>
-                      <configuration>
-                        <resources>
-                          <resource>
-                            <targetPath>${project.build.directory}</targetPath>
-                            <file>target/${project.build.finalName}.jar</file>
-                            <destFileName>${project.artifactId}.jar</destFileName>
-                          </resource>
-                          <resource>
-                            <targetPath>${project.build.directory}</targetPath>
-                            <file>${project.build.directory}/${project.build.finalName}-${project.build.withDependencies}.jar</file>
-                            <destFileName>${project.artifactId}-${project.build.withDependencies}.jar</destFileName>
-                          </resource>
-                        </resources>
-                      </configuration>
-                    </execution>
-                  </executions>
-                </plugin>
-            </plugins>
-    </build>
-    <properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    	<project.build.withDependencies>jar-with-dependencies</project.build.withDependencies>
-    </properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.buddycloud</groupId>
+  <artifactId>channelserver</artifactId>
+  <packaging>jar</packaging>
+  <version>0.18.0-SNAPSHOT</version>
+  <name>Buddycloud Java Server</name>
+  <scm>
+    <url>https://github.com/buddycloud/buddycloud-server-java</url>
+  </scm>
+  <dependencies>
+    <dependency>
+      <groupId>org.xbill</groupId>
+      <artifactId>dnsjava</artifactId>
+      <version>2.1.6</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+      <artifactId>concurrentlinkedhashmap-lru</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.1-901.jdbc4</version>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>jaxen</groupId>
+      <artifactId>jaxen</artifactId>
+      <version>1.1.3</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>maven-cobertura-plugin</artifactId>
+          <groupId>maven-plugins</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>maven-findbugs-plugin</artifactId>
+          <groupId>maven-plugins</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.5.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.8</version>
+    </dependency>
+    <dependency>
+      <groupId>xmlunit</groupId>
+      <artifactId>xmlunit</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>xpp3</groupId>
+      <artifactId>xpp3</artifactId>
+      <version>1.1.4c</version>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime</groupId>
+      <artifactId>tinder</artifactId>
+      <version>1.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jivesoftware</groupId>
+      <artifactId>whack</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.2.8</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>nl.jqno.equalsverifier</groupId>
+      <artifactId>equalsverifier</artifactId>
+      <version>1.1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>proxool</groupId>
+      <artifactId>proxool</artifactId>
+      <version>0.8.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.lazyluke</groupId>
+      <artifactId>log4jdbc-remix</artifactId>
+      <version>0.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>net.xeoh</groupId>
+      <artifactId>jspf.core</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+  </dependencies>
+  <repositories>
+    <repository>
+      <id>project.local</id>
+      <name>project</name>
+      <url>file:${project.basedir}/repo</url>
+    </repository>
+  </repositories>
+  <build>
+    <plugins>
+      <plugin>
+        <!-- Extended Maven antrun plugin -->
+        <!-- https://maven-antrun-extended-plugin.dev.java.net/ -->
+        <groupId>org.jvnet.maven-antrun-extended-plugin</groupId>
+        <artifactId>maven-antrun-extended-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>test-reports</id>
+            <phase>test</phase>
+            <configuration>
+              <tasks unless="maven.test.skip">
+                <junitreport todir="target/surefire-reports">
+                  <fileset dir="target/surefire-reports">
+                    <include name="**/*.xml" />
+                  </fileset>
+                  <report format="noframes" todir="target/surefire-reports" />
+                </junitreport>
+              </tasks>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-junit</artifactId>
+            <version>1.8.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-trax</artifactId>
+            <version>1.8.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
+          <skipTests>false</skipTests>
+          <testFailureIgnore>true</testFailureIgnore>
+          <forkMode>once</forkMode>
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+          <useFile>false</useFile>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <outputFile>${project.build.directory}/${project.build.finalName}-${project.build.withDependencies}.jar</outputFile>
+          <transformers>
+            <transformer
+              implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              <mainClass>org.buddycloud.channelserver.Main</mainClass>
+            </transformer>
+          </transformers>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.withDependencies>jar-with-dependencies</project.build.withDependencies>
+  </properties>
 </project>
