--- a/pom.xml
+++ b/pom.xml
@@ -192,8 +192,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
-                    <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m
-                        -Xmx1024m</argLine>
+                    <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
                     <skipTests>false</skipTests>
                     <testFailureIgnore>true</testFailureIgnore>
                     <forkMode>once</forkMode>
