Dialling down the logging as its causing issues on travis

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.SYSLOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.SYSLOG.layout.ConversionPattern=%-5p %t: %c{1} - %m
 log4j.appender.SYSLOG.Facility=USER
 
-log4j.logger.jdbc.sqlonly=INFO
+log4j.logger.jdbc.sqlonly=ERROR
 log4j.logger.jdbc.sqltiming=FATAL
 log4j.logger.jdbc.audit=FATAL
 log4j.logger.jdbc.resultset=FATAL
