--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.buddycloud</groupId>
     <artifactId>channelserver</artifactId>
     <packaging>jar</packaging>
-    <version>0.18.0-SNAPSHOT</version>
+    <version>0.18.0</version>
     <name>Buddycloud Java Server</name>
 
     <scm>
