--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ jdk:
 after_success:
 - mvn -DserviceJobId=$TRAVIS_JOB_ID clean cobertura:cobertura coveralls:cobertura
   -Dcobertura.report.format=xml
+env:
+  global:
+    secure: y2eA9GUJrzAhB4URuvN2GS0rflVXYoUhVxj1c2FSoL81rNrTnfop6RgF/xkePzeRjPM5RFSfxx+rPV3ew7GxKi38SKFBWS0X16KEAy4hVeUU8fQN5TZsGWAs1vQBS3pafZy83p6rqgKatIPNVLsJKKO4ATvShJhldO7IlmjPgmI=
+    secure: 1xcCOEQSTPZN8HURZve+tLhzONJoisjjqk659k1W771NEjzAfCFUbnOksXb/323UjXp2KFBuJcWFr4+5xG51D8VNP/FxeY2Uycr8AcaUh9bgJeXqXw3XoGBm+Wlrf/RhL67s1fqs9iGXZXrjrTYQccagDdVrxBmA8XRECmkqxP4=
 deploy:
   provider: bintray
   file: ".travis/bintray.json"
-  user:
-    secure: DQvbbQjwxtBEAxt3Pi9VDkfUndU2qDKntPs7CnmO2C37XFwxsUppzMrmvbh2TpeCxnHbiemctbQIvCNKt01UDqo/oEEPAUzpQkEr78iA60yriCItTGplrkiSYxGQCfUodD/YGoCh20n98f+P6rhoFn8mzzgmm1rDlYRdysE+oII=
-  key:
-    secure: YFla+XtiAvEYBYYIisdz+fkevWzufweser+VAXqd5F5Of/LZtKuPmS2bZjSiDD1w54hfLcsmKZhC/7JnxdstU7ta3WXilgiyZpTYIK223QV43YtMKtpmzi2eyXRCFUTW+8vghfrhN7yuVMI/tBZ9t6RwguUwkGESLkCypLadZPo=
