--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ deploy:
   file: ".travis/bintray.json"
   user: "$BINTRAY_USER"
   key: "$BINTRAY_API_KEY"
+  on:
+    branch: master
+    tags: true
