testing skip_cleanup: true

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ deploy:
   file: ".travis/bintray.json"
   user: "$BINTRAY_USER"
   key: "$BINTRAY_API_KEY"
+  skip_cleanup: true
   on:
     branch: master
     tags: true
